<resources>
    <string name="app_name">Account Manager</string>
    <string name="login">Login Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginBTN">Login</string>
    <string name="newAcc">New user? Create new Account...</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="already">Already An User? Click Here...</string>
    <string name="signup">Sign Up</string>
    <string name="add_your_details_here">Add Your Details here</string>
    <string name="dashboard">Dashboard</string>
    <string name="username">Username</string>
    <string name="addAcc">Add Account</string>
    <string name="account">Name of the Account</string>

</resources>