<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:paddingTop="20dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_your_details_here"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingTop="125dp"
        android:text="@string/name"
        android:textColorHint="@color/black"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/signupBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/clickHereLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:onClick="gotoLogin"/>


</LinearLayout>