<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:fontFamily="@font/acme"
            android:paddingTop="50dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/loginBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#2196F3"
            android:backgroundTint="#2196F3"
            android:text="@string/loginBTN"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>
