<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".addAcc">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:paddingTop="20dp"
        android:text="@string/addAcc"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp" />
    <EditText
        android:id="@+id/nameAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/account"
        android:inputType="text"
        android:paddingTop="125dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/accEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/accPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />
    <Button
        android:id="@+id/addAccBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/addAcc" />


</LinearLayout>